--- a/haproxy.tmpl
+++ b/haproxy.tmpl
@@ -16,6 +16,7 @@ defaults
     option  http-server-close
     option  forwardfor
     option  redispatch
+    option  http-keep-alive
 
     errorfile 400 /errorfiles/400.http
     errorfile 403 /errorfiles/403.http
