support for setting balance algorithm to the defaults section

--- a/haproxy.tmpl
+++ b/haproxy.tmpl
@@ -11,7 +11,8 @@ global
 
 defaults
     mode    http
-    balance roundrobin
+    balance {{.BalanceAlgorithm}}
+    
 {{.ExtraDefaults}}
     option  {{.ConnectionMode}}
     option  forwardfor
