--- a/proxy/test_configs/tmpl/haproxy.tmpl
+++ b/proxy/test_configs/tmpl/haproxy.tmpl
@@ -11,7 +11,7 @@ global
 
 defaults
     mode    http
-    balance roundrobin
+    balance {{.BalanceAlgorithm}}
 {{.ExtraDefaults}}
     option  {{.ConnectionMode}}
     option  forwardfor
