Force using Docker DNS resolver, so HAProxy will update DNS names for services (#227)
This allows to make service UP when starting with `init-addr none` so IP of service will be resolver later when service will be UP. Now proxy can be started first before any services are running yet

--- a/haproxy.tmpl
+++ b/haproxy.tmpl
@@ -9,6 +9,9 @@ global
     ssl-default-server-options {{.SslBindOptions}}
     ssl-default-server-ciphers {{.SslBindCiphers}}
 
+resolvers docker
+    nameserver dns 127.0.0.11:53
+
 defaults
     mode    http
     balance roundrobin
