Revert "Force using Docker DNS resolver, so HAProxy will update DNS names for services This allows to make service UP when starting with `init-addr none` so IP of service will be resolver later when service will be UP. Now proxy can be started first before any services are running yet"
This reverts commit 11c44cd3a54e9e33ec0668974ec9ae58551732b7.

--- a/proxy/test_configs/tmpl/go-demo-be.tmpl
+++ b/proxy/test_configs/tmpl/go-demo-be.tmpl
@@ -1,4 +1,4 @@
 backend go-demo-be
 	{{ range $i, $e := service "go-demo" "any" }}
-	server {{$e.Node}}_{{$i}}_{{$e.Port}} {{$e.Address}}:{{$e.Port}} check resolvers docker
+	server {{$e.Node}}_{{$i}}_{{$e.Port}} {{$e.Address}}:{{$e.Port}} check
 	{{end}}
